# GetDex

./: .gitignore  README-zh_CN.md  README.md  build.gradle
app/: build.gradle
app/libs/: app-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init  xposed_init_real
app/src/main/cpp/: CMakeLists.txt  dlopen.c  getdex.cpp
app/src/main/cpp/include/: cymoe.h  dlopen.h  getdex.h
app/src/main/java/com/mivik/mxp/: Const.java  MXPHookInitPackageResources.java  MXPHookLoadPackage.java  MXPModule.java
app/src/main/kotlin/com/mivik/getdex/: GetDex.kt  MainActivity.kt  MainHook.kt  ZygoteHook.kt
app/src/main/kotlin/com/mivik/mxp/: Const.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
